Sun Jun 18 20:28:43 2006  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_methods): The return value
	  of WIN32OLE#ole_methods should include PROPERTYPUTREF methods.

	* ext/win32ole/win32ole.c (fole_put_methods): The return value
	  of WIN32OLE#ole_put_methods should include PROPERTYPUTREF methods.

	* test/win32ole/test_ole_methods.rb: ditto.

	* ext/win32ole/win32ole.c (ole_propertyput): support
	  PROPERTYPUTREF. [ruby-talk:183042]

	* test/win32ole/test_propertyputref.rb : ditto.

Sat Jun 17 23:42:26 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (Init_eval): add aliases invoke_method and
	  invoke_functional_method corresponding send and funcall
	  respectively.  [ruby-talk:197512]

	* parse.y (parser_yylex): returns the most typical keyword token
	  on EXPR_FNAME.  [ruby-core:7995]

	* ext/socket/socket.c: protoize.

Sat Jun 17 14:53:32 2006  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Kernel#Pathname): new method.

Sat Jun 17 02:01:00 2006  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (Kernel#pretty_inspect): defined for pretty printed
	  string.

Fri Jun 16 01:41:00 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_proc_arity): get rid of segfault for mere splat.

	* gc.c (gc_mark_children): NODE_BLOCK_PASS needs u3 to be marked.

Thu Jun 15 22:06:56 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (then): remove ':' from 'then' and 'do' rules.

Wed Jun 14 18:00:20 2006  Eric Hodel <drbrain@segment7.net>

	* enum.c (enum_any): Documentation typo.

Wed Jun 14 15:01:09 2006  Eric Hodel <drbrain@segment7.net>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser#warn): Don't print
	  warnings when -q is set.

Wed Jun 14 16:11:37 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_f_method_name, rb_f_callee_name): document typo.

Wed Jun 14 15:19:14 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (env_aset): raise TypeError on nil with more descriptive
	  message.  [ruby-core:07990]
